exports[`components/Switch disabled when "false" a default checkbox is rendered 1`] = `
<div
  className="rnw-View rnw-View-flexReset"
  style={
    Object {
      "MozUserSelect": "none",
      "WebkitUserSelect": "none",
      "cursor": "pointer",
      "height": "20px",
      "msUserSelect": "none",
      "userSelect": "none",
      "width": "40px",
    }
  }>
  <div
    className="rnw-View rnw-View-flexReset"
    style={
      Object {
        "WebkitTransition": "0.1s",
        "backgroundColor": "#939393",
        "borderBottomLeftRadius": "10px",
        "borderBottomRightRadius": "10px",
        "borderTopLeftRadius": "10px",
        "borderTopRightRadius": "10px",
        "bottom": "0px",
        "height": "70%",
        "left": "0px",
        "marginBottom": "auto",
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": "auto",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
        "transition": "0.1s",
        "width": "90%",
      }
    } />
  <div
    className="rnw-View rnw-View-flexReset"
    style={
      Object {
        "WebkitAlignSelf": "flex-start",
        "WebkitTransform": "translateX(0%)",
        "WebkitTransition": "0.1s",
        "alignSelf": "flex-start",
        "backgroundColor": "#FAFAFA",
        "borderBottomLeftRadius": "100%",
        "borderBottomRightRadius": "100%",
        "borderTopLeftRadius": "100%",
        "borderTopRightRadius": "100%",
        "boxShadow": "0px 1px 3px rgba(0,0,0,0.5)",
        "height": "20px",
        "msFlexItemAlign": "start",
        "msTransform": "translateX(0%)",
        "transform": "translateX(0%)",
        "transition": "0.1s",
        "width": "20px",
      }
    } />
  <input
    checked={false}
    className=""
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "bottom": "0px",
        "cursor": "inherit",
        "height": "100%",
        "left": "0px",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "opacity": 0,
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
        "width": "100%",
      }
    }
    type="checkbox" />
</div>
`;

exports[`components/Switch disabled when "true" a disabled checkbox is rendered 1`] = `
<div
  className="rnw-View rnw-View-flexReset"
  style={
    Object {
      "MozUserSelect": "none",
      "WebkitUserSelect": "none",
      "cursor": "default",
      "height": "20px",
      "msUserSelect": "none",
      "userSelect": "none",
      "width": "40px",
    }
  }>
  <div
    className="rnw-View rnw-View-flexReset"
    style={
      Object {
        "WebkitTransition": "0.1s",
        "backgroundColor": "#D5D5D5",
        "borderBottomLeftRadius": "10px",
        "borderBottomRightRadius": "10px",
        "borderTopLeftRadius": "10px",
        "borderTopRightRadius": "10px",
        "bottom": "0px",
        "height": "70%",
        "left": "0px",
        "marginBottom": "auto",
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": "auto",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
        "transition": "0.1s",
        "width": "90%",
      }
    } />
  <div
    className="rnw-View rnw-View-flexReset"
    style={
      Object {
        "WebkitAlignSelf": "flex-start",
        "WebkitTransform": "translateX(0%)",
        "WebkitTransition": "0.1s",
        "alignSelf": "flex-start",
        "backgroundColor": "#BDBDBD",
        "borderBottomLeftRadius": "100%",
        "borderBottomRightRadius": "100%",
        "borderTopLeftRadius": "100%",
        "borderTopRightRadius": "100%",
        "boxShadow": "0px 1px 3px rgba(0,0,0,0.5)",
        "height": "20px",
        "msFlexItemAlign": "start",
        "msTransform": "translateX(0%)",
        "transform": "translateX(0%)",
        "transition": "0.1s",
        "width": "20px",
      }
    } />
  <input
    checked={false}
    className=""
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "bottom": "0px",
        "cursor": "inherit",
        "height": "100%",
        "left": "0px",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "opacity": 0,
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
        "width": "100%",
      }
    }
    type="checkbox" />
</div>
`;

exports[`components/Switch value when "false" an unchecked checkbox is rendered 1`] = `
<div
  className="rnw-View rnw-View-flexReset"
  style={
    Object {
      "MozUserSelect": "none",
      "WebkitUserSelect": "none",
      "cursor": "pointer",
      "height": "20px",
      "msUserSelect": "none",
      "userSelect": "none",
      "width": "40px",
    }
  }>
  <div
    className="rnw-View rnw-View-flexReset"
    style={
      Object {
        "WebkitTransition": "0.1s",
        "backgroundColor": "#939393",
        "borderBottomLeftRadius": "10px",
        "borderBottomRightRadius": "10px",
        "borderTopLeftRadius": "10px",
        "borderTopRightRadius": "10px",
        "bottom": "0px",
        "height": "70%",
        "left": "0px",
        "marginBottom": "auto",
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": "auto",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
        "transition": "0.1s",
        "width": "90%",
      }
    } />
  <div
    className="rnw-View rnw-View-flexReset"
    style={
      Object {
        "WebkitAlignSelf": "flex-start",
        "WebkitTransform": "translateX(0%)",
        "WebkitTransition": "0.1s",
        "alignSelf": "flex-start",
        "backgroundColor": "#FAFAFA",
        "borderBottomLeftRadius": "100%",
        "borderBottomRightRadius": "100%",
        "borderTopLeftRadius": "100%",
        "borderTopRightRadius": "100%",
        "boxShadow": "0px 1px 3px rgba(0,0,0,0.5)",
        "height": "20px",
        "msFlexItemAlign": "start",
        "msTransform": "translateX(0%)",
        "transform": "translateX(0%)",
        "transition": "0.1s",
        "width": "20px",
      }
    } />
  <input
    checked={false}
    className=""
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "bottom": "0px",
        "cursor": "inherit",
        "height": "100%",
        "left": "0px",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "opacity": 0,
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
        "width": "100%",
      }
    }
    type="checkbox" />
</div>
`;

exports[`components/Switch value when "true" a checked checkbox is rendered 1`] = `
<div
  className="rnw-View rnw-View-flexReset"
  style={
    Object {
      "MozUserSelect": "none",
      "WebkitUserSelect": "none",
      "cursor": "pointer",
      "height": "20px",
      "msUserSelect": "none",
      "userSelect": "none",
      "width": "40px",
    }
  }>
  <div
    className="rnw-View rnw-View-flexReset"
    style={
      Object {
        "WebkitTransition": "0.1s",
        "backgroundColor": "#A3D3CF",
        "borderBottomLeftRadius": "10px",
        "borderBottomRightRadius": "10px",
        "borderTopLeftRadius": "10px",
        "borderTopRightRadius": "10px",
        "bottom": "0px",
        "height": "70%",
        "left": "0px",
        "marginBottom": "auto",
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": "auto",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
        "transition": "0.1s",
        "width": "90%",
      }
    } />
  <div
    className="rnw-View rnw-View-flexReset"
    style={
      Object {
        "WebkitAlignSelf": "flex-start",
        "WebkitTransform": "translateX(100%)",
        "WebkitTransition": "0.1s",
        "alignSelf": "flex-start",
        "backgroundColor": "#009688",
        "borderBottomLeftRadius": "100%",
        "borderBottomRightRadius": "100%",
        "borderTopLeftRadius": "100%",
        "borderTopRightRadius": "100%",
        "boxShadow": "0px 1px 3px rgba(0,0,0,0.5)",
        "height": "20px",
        "msFlexItemAlign": "start",
        "msTransform": "translateX(100%)",
        "transform": "translateX(100%)",
        "transition": "0.1s",
        "width": "20px",
      }
    } />
  <input
    checked={true}
    className=""
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "bottom": "0px",
        "cursor": "inherit",
        "height": "100%",
        "left": "0px",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "opacity": 0,
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
        "width": "100%",
      }
    }
    type="checkbox" />
</div>
`;
